fixed alignment with highlight action so that action link breaks into newline when needed

--- a/static/css/xr-mass.css
+++ b/static/css/xr-mass.css
@@ -324,6 +324,10 @@ div.home-banner-text {
         bottom: 2.5rem;
     }
 
+    .highlight-action span {
+      display: inline-block;
+    }
+
     .date-month, .date-day {
         font-size: 1.2rem;
     }
@@ -344,10 +348,6 @@ div.home-banner-text {
         margin-top: 18px;
         margin-bottom: 18px;
     }
-
-    /*ul.navbar-nav {
-        align-items: left;
-    }*/
 }
 
 @media (min-width: 576px) {
